PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.7

- OCI8
  . Fixed bug #71600 (oci_fetch_all segfaults when selecting more than
    eight columns)

- SQLite3:
  . Fixed bug #68849 (bindValue is not using the right data type).
    (Anatol)

28 Apr 2016 PHP 7.0.6

- Core:
  . Fixed bug #71930 (_zval_dtor_func: Assertion `(arr)->gc.refcount <= 1'
    failed). (Laruence)
  . Fixed bug #71922 (Crash on assert(new class{})). (Nikita)
  . Fixed bug #71914 (Reference is lost in "switch"). (Laruence)
  . Fixed bug #71871 (Interfaces allow final and abstract functions). (Nikita)
  . Fixed Bug #71859 (zend_objects_store_call_destructors operates on realloced
    memory, crashing). (Laruence)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)
  . Fixed bug #71750 (Multiple Heap Overflows in php_raw_url_encode/
    php_url_encode). (Stas)
  . Fixed bug #71731 (Null coalescing operator and ArrayAccess). (Nikita)
  . Fixed bug #71609 (Segmentation fault on ZTS with gethostbyname). (krakjoe)
  . Fixed bug #71428 (inheritance and allow_null). (krakjoe)
  . Fixed bug #71414 (Inheritance, traits and interfaces). (krakjoe)
  . Fixed bug #71359 (Null coalescing operator and magic). (krakjoe)
  . Fixed bug #71334 (Cannot access array keys while uksort()). (Nikita)
  . Fixed bug #69659 (ArrayAccess, isset() and the offsetExists method).
    (Nikita)
  . Fixed bug #69537 (__debugInfo with empty string for key gives error).
    (krakjoe)
  . Fixed bug #62059 (ArrayObject and isset are not friends). (Nikita)
  . Fixed bug #71980 (Decorated/Nested Generator is Uncloseable in Finally).
    (Nikita)

- Curl:
  . Fixed bug #71831 (CURLOPT_NOPROXY applied as long instead of string).
    (Michael Sierks)

- Date:
  . Fixed bug #71889 (DateInterval::format Segmentation fault).
    (Thomas Punt)

- Intl: